# PyCrCNN

./: Dockerfile  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  after_creation.sh  devcontainer.json  setup.sh
