[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycrcnn"
version = "0.0.1"
description = "pycrcnn"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "liaboveall"}
]

[project.urls]
Homepage = "https://github.com/liaboveall/PyCrCNN"

[tool.setuptools.packages.find]
where = ["pycrcnn"]
